--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,1 +1,47 @@
- 
+name: Deploy to Azure Web App
+
+on:
+    push:
+        branches:
+            - main
+
+jobs:
+    build-and-deploy:
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+              with:
+                  submodules: "recursive" # Added to fetch all submodules
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "20"
+                  registry-url: "https://registry.npmjs.org/"
+
+            - name: Install PNPM
+              run: npm install -g pnpm@9.12.3
+
+            - name: Install Dependencies
+              run: |
+                  pnpm install --no-frozen-lockfile
+                  pnpm add -D typescript@5.6.3 @types/node@^20.0.0
+
+            - name: Build Workspace Packages
+              run: |
+                  pnpm run build
+                  cd packages/core && pnpm build
+                  cd ../plugin-aptos && pnpm build
+                  cd ../plugin-solana && pnpm build
+                  # Add other package builds as needed
+
+            - name: Build TypeScript
+              run: pnpm tsc
+
+            - name: Deploy to Azure Web App
+              uses: azure/webapps-deploy@v2
+              with:
+                  app-name: "eliza"
+                  publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+                  package: .
